--- a/PyramidPanic-am1b/PyramidPanic-am1b/PyramidPanic-am1b.csproj
+++ b/PyramidPanic-am1b/PyramidPanic-am1b/PyramidPanic-am1b.csproj
@@ -116,6 +116,8 @@
     <Compile Include="GameScenes\PlayScene\Beetle\Beetle.cs" />
     <Compile Include="GameScenes\PlayScene\Beetle\WalkUp.cs" />
     <Compile Include="GameScenes\PlayScene\Beetle\WalkDown.cs" />
+    <Compile Include="GameScenes\PlayScene\Explorer\ExplorerWalkUp.cs" />
+    <Compile Include="GameScenes\PlayScene\Explorer\ExplorerIdleWalk.cs" />
     <Compile Include="GameScenes\PlayScene\Explorer\ExplorerWalkDown.cs" />
     <Compile Include="GameScenes\PlayScene\Explorer\ExplorerWalkLeft.cs" />
     <Compile Include="GameScenes\PlayScene\Explorer\ExplorerWalkRight.cs" />
